# blog

./: .eslintrc.cjs  .gitignore  .gitmodules  BetterPages.hs  README.md  StaticSite.cabal  TagFormat.hs  Utils.hs  about.md  archive.html  astro.config.mjs  blog.cabal  blog.nix  config.yaml  contact.md  eslint.config.mjs  extra.nix  friends.md  hakyll.nix  hie.yaml  index.html  latex-svg-hakyll.nix  latex-svg-image.nix  latex-svg-pandoc.nix  package-lock.json  package.json  photography.md  pnpm-lock.yaml  prettier.config.mjs  privacy-policy.md  release.nix  renovate.json  robots.txt  shell.nix  site.hs  sitemap.xml  stack-old.yaml  stack.yaml  tagformat.hs  tsconfig.json  (+1 more)
.github/workflows/: blog.yml  build-deploy.yml  ci.yml  main.yml  static-deploy.yml.bk
.vim/: coc-settings.json
_site/: about.html  contact.html  index.html  privacy-policy.html  sitemap.xml  tags.html
_site/archive/: 2019.html  2020.html  index.html
_site/css/: colorscheme.css  inconsolata.css  wordpress.css  work-sans.css
_site/posts/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  45.html  (+58 more)
_site/tags/: ai.html  computer-vision.html  daily-thoughts.html  hakyll.html  hello-world.html  politics.html  projects.html  quote-of-the-day.html  writing.html
css/: colorscheme.css  inconsolata.css  wordpress.css  work-sans.css
extra/: hakyll-custom-goodies.cabal
extra/src/Hakyll/Contrib/: BetterArchive.hs  BetterPages.hs
extra/src/Hakyll/Contrib/Web/: CustomRoutes.hs  TagFormat.hs  TextUtils.hs
main-site/: index.html
main-site/.well-known/: keybase.txt
photography/f22-a1/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  index.html
photography/f22-a2/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  index.html
photography/f22-a3/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  index.html
photography/f22-a4/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  index.html
photography/f22-a5/: 01.md  02.md  03.md  04.md  05.md  06.md  index.html
photography/f22-a6/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  index.html
posts/: 2019-03-12-hello-world.markdown  2019-04-01-the-othello-server.markdown  2019-04-08-opencv-chessboard-test.markdown  2019-05-19-more-posts.markdown  2019-05-21-art-stuff.markdown  2019-05-21-whops.markdown  2019-05-22-putting-things-on-the-internet.markdown  2019-05-23-calendars.markdown  2019-05-25-frisbee.markdown  2019-05-25-whops-pt-2-boogaloo.markdown  2019-05-26-being-tired.markdown  2019-05-30-whops-the-unnumbered.markdown  2019-06-02-senior-research.markdown  2019-06-02-you-fool.markdown  2019-06-03-art-again.markdown  2019-06-04-forgot-to-practice.markdown  2019-06-05-a-true-eclectic-collection-of-thoughts.markdown  2019-06-06-friends.markdown  2019-06-09-angp.markdown  2019-06-11-elementary-school-reunion.markdown  2019-06-11-sleep.markdown  2019-06-12-qotd-1.markdown  2019-06-12-something-about-doctors-idk.markdown  2019-06-13-a-good-day.markdown  2019-06-13-qotd-2.markdown  2019-06-14-another-story-about-trying.markdown  2019-06-14-qotd-3.markdown  2019-06-15-qotd-4.markdown  2019-06-15-todays-results.markdown  2019-06-16-fathers-day.markdown  2019-06-16-qotd-5.markdown  2019-06-17-being-selfish.markdown  2019-06-17-qotd-6.markdown  2019-06-18-qotd-7.markdown  2019-06-18-scanning-cards.markdown  2019-06-19-what-i-want-posts-to-be.markdown  2019-06-20-born.markdown  2019-06-20-qotd-8.markdown  2019-06-21-why-short-post.markdown  2019-06-22-am-i-smart.markdown  (+94 more)
public/: robots.txt
src/: colors.ts  content.config.ts  date.ts  env.d.ts  utils.ts
src/components/: ImageList.astro  PageList.astro  PairedImageList.astro  Photograph.astro  PostList.astro  RawSnippet.astro  processPhotographyImage.ts
src/content/: config.ts
src/css/: colorscheme.css  inconsolata.css  wordpress.css  wordpress2.css  work-sans.css
src/data/: photography.ts  posts.ts  tags.ts  years.ts
src/layouts/: Default.astro  Page.astro  Photography.astro  Post.astro  default.astro  post.astro
src/models/: ArchivePage.ts  Default.ts  Image.ts  ImageList.ts  Page.ts  PageList.ts  PairedImageList.ts  Post.ts  PostList.ts  TagPage.ts
src/pages/: about.md  archive.astro  contact.md  friends.md  index.astro  photography.astro  photography.md  privacy-policy.md  rss.xml.ts  tags.astro
src/posts/: 2019-04-08-opencv-chessboard-test.markdown  2019-05-19-more-posts.markdown  2019-05-22-putting-things-on-the-internet.markdown  2019-05-26-being-tired.markdown  2019-06-04-forgot-to-practice.markdown  2019-06-11-sleep.markdown  (+37 more)
templates/: archive-page.html  archive.html  default.html  image-list.html  page.html  post-list.html  post.html
(+192 files in other folders)
