name:               StaticSite
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Utils
                  , TagFormat
  build-depends:    base == 4.*
                  , text == 1.2.*
                  , hakyll == 4.13.*
  ghc-options:      -threaded
  default-language: Haskell2010
