name:               blog
version:            0.4.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Utils
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , latex-svg-hakyll == 0.2.*
                  , latex-svg-image == 0.2.*
                  , latex-svg-pandoc == 0.2.*
                  , binary == 0.8.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , hakyll-custom-goodies == 0.*
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
