cabal-version:  >= 1.10
name:           hakyll-custom-goodies
version:        0.1.1.0
synopsis:       Some nice utilities I developed for my Hakyll site
description:
  This library provides assorted utility functions for customizing a Hakyll 
  site. Notable utilities include a page enumerator that doesn't group pages,
  a whitespace-safe title slug generator, and more customizable tag formatting.

license:      GPL-3
license-file: LICENSE
author:       Jack Duvall
maintainer:   Jack Duvall <jediguy9@gmail.com>
copyright:    2020 Jack Duvall
build-type:   Simple
tested-with:  GHC ==8.6.5

source-repository head
  type:     git
  location: https://github.com/duvallj/blog
  subdir:   extra

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Hakyll.Contrib.BetterPages
                  , Hakyll.Contrib.BetterArchive
                  , Hakyll.Contrib.Web.TagFormat
                  , Hakyll.Contrib.Web.TextUtils
                  , Hakyll.Contrib.Web.CustomRoutes
  build-depends:    base == 4.*
                  , containers == 0.6.*
                  , text == 1.2.*
                  , hakyll == 4.13.*
                  , time >= 1.9.3
